--- a/blog/pyproject.toml
+++ b/blog/pyproject.toml
@@ -10,6 +10,8 @@ python = "3.12.1"
 django = "^6.0.1"
 ipython = "^9.9.0"
 django-extensions = "^4.1"
+django-summernote = "^0.8.20.0"
+pillow = "^12.1.0"
 
 
 [build-system]
